# omerfitestlib

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/omerfitestlib/: __about__.py  __init__.py  main.py
tests/: __init__.py
