[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "omerfitestlib"
version = "1.1.0"
description = ""
authors = [
    { name = "Ömer Furkan İşleyen", email = "54645034+OmerFI@users.noreply.github.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
